--- a/product-page/src/Components/styles/Accordian.module.css
+++ b/product-page/src/Components/styles/Accordian.module.css
@@ -1,9 +1,11 @@
 .track{
-    width: 95%;
+    width: 100%;
+    margin: auto;
 }
 
 .track::-webkit-scrollbar{
     width: 3px;
+    border-radius: 50px;
 }
 .track::-webkit-scrollbar-thumb{
     background-color: black;
@@ -14,4 +16,4 @@
     border-radius: 50px;
 }
 
-
+/* Recursive Components in react */
