--- a/homepage/src/Components/Navbar/Navbar.css
+++ b/homepage/src/Components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
     position: relative;
 } */
 
-
+/* 
 
 @media screen and (min-width: "0px")and(max-width:"370px") {
     .Container {
@@ -14,4 +14,11 @@
         top: 300px;
         right: 100px;
     } */
+
+
+.turnIcon:hover {
+
+    transform: "rotate(180deg)"
+
+
 }
